✨: C파트 Phase 0+1 - 영수증 도메인 로직 및 보안 스코프 격리 (#2) (#2)
* Feat/10/ocr 정제 알고리즘 (#3)

* ✨ Feat: OCR 텍스트 정제용 유틸리티 클래스 구현

* ✨ Feat: Receipt 엔티티 정보 수정 및 상태 자동 변경 로직 추가

* ✨ Feat: 영수증 정보 수정을 위한 서비스 로직 구현

* ✨ Feat: 영수증 정보 수정을 위한 PATCH API 엔드포인트 구현

* 🔧 Chore: Swagger UI 접근 허용을 위한 Security 설정 업데이트

* ♻️ Refactor: 서비스 내 파싱 로직을 ReceiptParser로 이관하여 코드 최적화

* ✨ Feat: MD5 해시를 이용한 영수증 중복 업로드 방지 기능 구현

* ✨ Feat: 영수증 일괄 업로드 기능 및 진행 바 UI 구현

* ✨ Feat: 영수증 원본 이미지 서버 저장 및 조회 기능 구현

* 🎨 Style: 프로젝트 전체 Google Java Format 적용 (spotless)

* Feat/11/영수증 결제일시 타입 변경 (#4)

* ✨ Feat: 영수증 결제 시각 추출(LocalDateTime) 및 야간 지출 자동 판별 로직 구현

* ✨ Feat: 영수증 데이터 타입 변경 및 Gemini AI 연동

* ✨ Feat: OS 독립적 파일 업로드 경로 자동화 (#5)

* 🔒 Security: 매직 바이트 검증을 통한 비정상 파일 업로드 차단 확인 (#6)

* 🐛 Fix: Java Record 접근자 대소문자 오타 및 호출 방식 수정 (#7)

* Feat/16/관리자 감사로그 구현 (#8)

* ✨ Feat: 감사 로그 기록을 위한 AuditLog 엔티티 생성

* ✨ Feat: 영수증 상태 변경 시 감사 로그 기록 기능 구현 및 연동

* ✨ Feat: 관리자 감사 로그 및 반려 사유 구현

* ✨ Feat: 야간 태그 버그 수정 및 UI 가로 너비 확장 (#9)

* ✨ Feat: #18 APPROVED 상태 영수증 수정 방지 가드 로직 추가 (#10)

upload.html에서
const dis = isProcessable ? '' : 'disabled'; //이거 주석처리하고 아래 활성화화면 수정가능해짐 그러면 웹에서 수정하려고 하면 수정안됨. -> 백엔드에서 차단함.  
//const dis = ''; // 무조건 버튼 활성화
이부분으로 확인함

* ✨ Feat: 시스템 실패 상태 및 에러 코드 규격화 반영 (#11)

* Feat/23/워크스페이스 멤버십 엔티티 구현 (#12)

* ✨ Feat: 워크스페이스 멤버십 엔티티 및 참여 신청/승인 API 구현 (#23)

* ✨ Feat: 워크스페이스 참여 신청 및 승인 관리 UI 구현 (#23)

* ✨ Feat: 워크스페이스 권한별 UI 차별화 및 내 목록 자동 조회 기능 구현

* ✨ Feat/21: 지능형 태그 시스템 및 영수증 재제출 기능 구현 (#13)

* Feat/21/지능형 태그 시스템 (#14)

* ✨ Feat/21: 지능형 태그 시스템 및 영수증 재제출 기능 구현

* ♻️ Refactor: DTO 기반 조회 스코프 격리 및 에러 명세 최적화 완료

* 🎨 Style: Google Java Format 적용 및 불필요한 공백 제거

* Feat/21/지능형 태그 시스템 (#15)

* ✨ Feat/21: 지능형 태그 시스템 및 영수증 재제출 기능 구현

* ♻️ Refactor: DTO 기반 조회 스코프 격리 및 에러 명세 최적화 완료

* ✨ Feat: 초기 상태 ANALYZING 선저장 구조 및 상태 전이 가드 구현 (#16)

* ♻️ Refactor: 상태 머신 전이 가드 강화 및 파일 검증 로직 보완 (#17)

* ✨ Feat: JWT 보안 전환 및 영수증 도메인 핵심 로직 구현 (#19)

* 🔧 fix: CI 테스트 환경 google.api.key 더미값 추가