@@ -1,6 +1,8 @@
 package com.example.backend.config;
 
 import jakarta.servlet.http.HttpServletResponse;
+import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -14,9 +16,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
@@ -28,32 +27,36 @@ public class SecurityConfig {
 
   @Bean
   public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-    http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(csrf -> csrf.disable())
-            .formLogin(fl -> fl.disable())
-            .httpBasic(hb -> hb.disable())
-            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                    // 1. 정적 리소스 및 HTML 페이지 완전 허용
-                    .requestMatchers("/", "/index.html", "/signin.html", "/signup.html").permitAll()
-                    .requestMatchers("/static/**", "/favicon.ico", "/error").permitAll()
+    http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        .csrf(csrf -> csrf.disable())
+        .formLogin(fl -> fl.disable())
+        .httpBasic(hb -> hb.disable())
+        .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+        .authorizeHttpRequests(
+            auth ->
+                auth.requestMatchers(
+                        "/",
+                        "/index.html",
+                        "/signin.html",
+                        "/signup.html",
+                        "/upload.html",
+                        "/select-workspace.html")
+                    .permitAll()
+                    .requestMatchers("/static/**", "/favicon.ico", "/error")
+                    .permitAll()
+                    .requestMatchers("/api/auth/**", "/api/v1/auth/**", "/api/v1/health")
+                    .permitAll()
+                    .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html")
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated())
+        .oauth2Login(oauth2 -> oauth2.successHandler(oAuth2SuccessHandler))
+        .exceptionHandling(
+            eh ->
+                eh.authenticationEntryPoint(
+                    (request, response, authException) ->
+                        response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "인증이 필요합니다.")));
 
-                    // 2. 인증 없이 접근 가능한 API (기원님 v1 경로 포함)
-                    .requestMatchers("/api/auth/**", "/api/v1/auth/**", "/api/v1/health").permitAll()
-
-                    // 3. Swagger 문서
-                    .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-
-                    .anyRequest().authenticated()
-            )
-            .oauth2Login(oauth2 -> oauth2.successHandler(oAuth2SuccessHandler))
-            .exceptionHandling(eh -> eh
-                    .authenticationEntryPoint((request, response, authException) ->
-                            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "인증이 필요합니다."))
-            );
-
-    // 필터 순서: Device 체크 -> JWT 체크 -> 인증 처리
     http.addFilterBefore(deviceAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
     http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
@@ -63,8 +66,10 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173", "http://localhost:8080"));
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+    configuration.setAllowedOrigins(
+        List.of("http://localhost:3000", "http://localhost:5173", "http://localhost:8080"));
+    configuration.setAllowedMethods(
+        Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
     configuration.setAllowedHeaders(List.of("*"));
     configuration.setAllowCredentials(true);
     configuration.setExposedHeaders(List.of("Authorization"));
